--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -47,72 +47,72 @@ jobs:
         run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
 
       - name: Check lint
-        run: flutter analyze > flutter_analyze_report.txt || true
+        run: flutter analyze # > flutter_analyze_report.txt || true
 
-      - name: Run unit test
-        run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
+      # - name: Run unit test
+      #   run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
 
-      - name: Report test result
-        uses: dorny/test-reporter@v1
-        if: always()
-        with:
-          name: 'flutter test'
-          path: 'flutter_test_report.txt'
-          reporter: 'flutter-json'
-          fail-on-error: 'false'
+      # - name: Report test result
+      #   uses: dorny/test-reporter@v1
+      #   if: always()
+      #   with:
+      #     name: 'flutter test'
+      #     path: 'flutter_test_report.txt'
+      #     reporter: 'flutter-json'
+      #     fail-on-error: 'false'
 
-      - name: Upload a coverage report to Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          files: ./coverage/lcov.info
+      # - name: Upload a coverage report to Codecov
+      #   uses: codecov/codecov-action@v3
+      #   with:
+      #     files: ./coverage/lcov.info
 
-      - name: Extract changed files
-        id: extract_changed_files
-        run: |
-          git fetch
-          CHANGED_FILES=$(git diff --diff-filter=d --name-only ${{ github.event.pull_request.base.sha }}..HEAD)
-          CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
-          CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
-          CHANGED_FILES="${CHANGED_FILES//$'\r'/'%0D'}"
-          echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
+      # - name: Extract changed files
+      #   id: extract_changed_files
+      #   run: |
+      #     git fetch
+      #     CHANGED_FILES=$(git diff --diff-filter=d --name-only ${{ github.event.pull_request.base.sha }}..HEAD)
+      #     CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
+      #     CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
+      #     CHANGED_FILES="${CHANGED_FILES//$'\r'/'%0D'}"
+      #     echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
 
-      - name: Check code metrics
-        run: |
-          flutter pub run dart_code_metrics:metrics analyze lib --reporter=console > dart-code-metrics_analyze_report.txt || true
+      # - name: Check code metrics
+      #   run: |
+      #     flutter pub run dart_code_metrics:metrics analyze lib --reporter=console > dart-code-metrics_analyze_report.txt || true
 
-      - name: Annotation for lint checker
-        if: always()
-        run: |
-          CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
-          CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
-          CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
-          CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
-          CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
-          CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
-          echo "$CHANGED_FILES"
-          for FILE in $CHANGED_FILES; do
-            echo "$FILE"
-            grep -1 -E ".*$FILE.*" flutter_analyze_report.txt || [[ $? == 1 ]]
-          done
+      # - name: Annotation for lint checker
+      #   if: always()
+      #   run: |
+      #     CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
+      #     CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
+      #     echo "$CHANGED_FILES"
+      #     for FILE in $CHANGED_FILES; do
+      #       echo "$FILE"
+      #       grep -1 -E ".*$FILE.*" flutter_analyze_report.txt || [[ $? == 1 ]]
+      #     done
 
-      - name: Annotation for DMC checker
-        if: always()
-        run: |
-          CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
-          CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
-          CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
-          CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
-          CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
-          CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
-          echo "$CHANGED_FILES"
-          for FILE in $CHANGED_FILES; do
-            echo "$FILE"
-            grep -1 -E ".*$FILE.*" dart-code-metrics_analyze_report.txt || [[ $? == 1 ]]
-          done
+      # - name: Annotation for DMC checker
+      #   if: always()
+      #   run: |
+      #     CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
+      #     CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
+      #     CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
+      #     echo "$CHANGED_FILES"
+      #     for FILE in $CHANGED_FILES; do
+      #       echo "$FILE"
+      #       grep -1 -E ".*$FILE.*" dart-code-metrics_analyze_report.txt || [[ $? == 1 ]]
+      #     done
 
-      - name: Remove problem matcher
-        if: always()
-        run: echo "::remove-matcher owner=dart-analyzer::"
+      # - name: Remove problem matcher
+      #   if: always()
+      #   run: echo "::remove-matcher owner=dart-analyzer::"
 
       # - name: Setup Ruby
       #   uses: ruby/setup-ruby@v1
