--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -13,4 +13,5 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v3
             - uses: ./.github/actions/escape/
