--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -13,5 +13,12 @@ jobs:
     test:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-            - uses: ./.github/actions/escape/
+            - 
+                uses: actions/checkout@v3
+            - 
+                uses: ./.github/actions/escape/
+                id: escape
+                with:
+                    target: "aaa"
+            -
+                run: echo "${{ steps.escape.outputs.escaped }}"
