--- a/.github/actions/escape/action.yaml
+++ b/.github/actions/escape/action.yaml
@@ -18,5 +18,5 @@ runs:
             with: 
                 script: |
                     const name = 'escaped'
-                    const value = '${{ input.target }}'
+                    const value = '${{ inputs.target }}'
                     core.setOutput(name, value)
