--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -19,6 +19,6 @@ jobs:
                 uses: ./.github/actions/escape/
                 id: escape
                 with:
-                    target: "aaa\nbbb\nccc"
+                    target: "aaa\\nbbb\\nccc"
             -
                 run: echo "${{ steps.escape.outputs.escaped }}"
