--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,19 +6,19 @@ on:
   workflow_dispatch:
 
 jobs:
-#   flutter-ci:
-#     uses: ./.github/workflows/flutter-ci.yaml
-#     with:
-#         flutter-version: 3.7.7
-    test:
-        runs-on: ubuntu-latest
-        steps:
-            - 
-                uses: actions/checkout@v3
-            - 
-                uses: ./.github/actions/escape/
-                id: escape
-                with:
-                    target: "aaa\\nbbb\\nccc"
-            -
-                run: echo "${{ steps.escape.outputs.escaped }}"
+    flutter-ci:
+        uses: ./.github/workflows/flutter-ci.yaml
+        with:
+            flutter-version: 3.7.7
+    # test:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - 
+    #             uses: actions/checkout@v3
+    #         - 
+    #             uses: ./.github/actions/escape/
+    #             id: escape
+    #             with:
+    #                 target: "aaa\\nbbb\\nccc"
+    #         -
+    #             run: echo "${{ steps.escape.outputs.escaped }}"
