--- a/.github/actions/get-chaged-files/action.yaml
+++ b/.github/actions/get-chaged-files/action.yaml
@@ -2,7 +2,7 @@ name: Get changed files
 
 outputs:
   changed-files:
-    value: ${{ steps.escape.outputs.changed-files }}
+    value: ${{ steps.changed-files.outputs.changed-files }}
 
 runs:
   using: "composite"
