--- a/.github/actions/get-chaged-files/action.yaml
+++ b/.github/actions/get-chaged-files/action.yaml
@@ -15,4 +15,4 @@ runs:
           const { execSync } = require('child_process')
           execSync('git fetch')
           const changedFiles = execSync('git diff --diff-filter=d --name-only ${{ github.event.pull_request.base.sha }}..HEAD')
-          core.setOutput('changedFiles', changedFiles.toString())
+          core.setOutput('changed-files', changedFiles.toString())
