--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -27,23 +27,23 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 100
 
-      # - name: Setup flutter environment
-      #   uses: subosito/flutter-action@v2
-      #   with:
-      #     flutter-version: '3.7.7'
-      #     channel: 'stable'
-      #     cache: true
-      #     cache-key: flutter
-      #     cache-path: ${{ runner.tool_cache }}/flutter
+      - name: Setup flutter environment
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.7.7'
+          channel: 'stable'
+          cache: true
+          cache-key: flutter
+          cache-path: ${{ runner.tool_cache }}/flutter
 
-      # - name: Get flutter packages
-      #   run: flutter pub get
+      - name: Get flutter packages
+        run: flutter pub get
 
-      # - name: Add problem matcher
-      #   run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+      - name: Add problem matcher
+        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
 
-      # - name: Check lint
-      #   run: flutter analyze > flutter_analyze_report.txt || true
+      - name: Check lint
+        run: flutter analyze > flutter_analyze_report.txt || true
 
       # - name: Run unit test
       #   run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
@@ -76,27 +76,22 @@ jobs:
         uses: ./.github/actions/get-chaged-files
         id: changed-files
 
-      - run: |
-          echo "${{ steps.changed-files.outputs.changed-files }}"
+      # - run: |
+      #     echo "${{ steps.changed-files.outputs.changed-files }}"
 
       # - name: Check code metrics
       #   run: |
       #     flutter pub run dart_code_metrics:metrics analyze lib --reporter=console > dart-code-metrics_analyze_report.txt || true
 
-      # - name: Annotation for lint checker
-      #   if: always()
-      #   run: |
-      #     CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
-      #     CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
-      #     echo "$CHANGED_FILES"
-      #     for FILE in $CHANGED_FILES; do
-      #       echo "$FILE"
-      #       grep -1 -E ".*$FILE.*" flutter_analyze_report.txt || [[ $? == 1 ]]
-      #     done
+      - name: Annotation for lint checker
+        if: always()
+        run: |
+          CHANGED_FILES="${{ steps.changed-files.outputs.changed-files }}"
+          echo $CHANGED_FILES
+          for FILE in $CHANGED_FILES; do
+            echo "$FILE"
+            grep -1 -E ".*$FILE.*" flutter_analyze_report.txt || [[ $? == 1 ]]
+          done
 
       # - name: Annotation for DMC checker
       #   if: always()
@@ -113,9 +108,9 @@ jobs:
       #       grep -1 -E ".*$FILE.*" dart-code-metrics_analyze_report.txt || [[ $? == 1 ]]
       #     done
 
-      # - name: Remove problem matcher
-      #   if: always()
-      #   run: echo "::remove-matcher owner=dart-analyzer::"
+      - name: Remove problem matcher
+        if: always()
+        run: echo "::remove-matcher owner=dart-analyzer::"
 
       # - name: Setup Ruby
       #   uses: ruby/setup-ruby@v1
