--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -24,7 +24,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 100
 
       - name: Setup flutter environment
@@ -43,41 +42,28 @@ jobs:
         run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
 
       - name: Check lint
-        run: flutter analyze > flutter_analyze_report.txt || true
+        run: flutter analyze > flutter_analyze_report.txt
 
-      # - name: Run unit test
-      #   run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
+      - name: Run unit test
+        run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
 
-      # - name: Report test result
-      #   uses: dorny/test-reporter@v1
-      #   if: always()
-      #   with:
-      #     name: 'flutter test'
-      #     path: 'flutter_test_report.txt'
-      #     reporter: 'flutter-json'
-      #     fail-on-error: 'false'
+      - name: Report test result
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: 'flutter test'
+          path: 'flutter_test_report.txt'
+          reporter: 'flutter-json'
+          fail-on-error: 'false'
 
-      # - name: Upload a coverage report to Codecov
-      #   uses: codecov/codecov-action@v3
-      #   with:
-      #     files: ./coverage/lcov.info
-
-      # - name: Extract changed files
-      #   id: extract_changed_files
-      #   run: |
-      #     git fetch
-      #     CHANGED_FILES=$(git diff --diff-filter=d --name-only ${{ github.event.pull_request.base.sha }}..HEAD)
-      #     : # CHANGED_FILES="${CHANGED_FILES//'%'/'%25'}"
-      #     : # CHANGED_FILES="${CHANGED_FILES//$'\n'/'%0A'}"
-      #     : # CHANGED_FILES="${CHANGED_FILES//$'\r'/'%0D'}"
-      #     echo "changed_files=$CHANGED_FILES" >> $GITHUB_OUTPUT
+      - name: Upload a coverage report to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: ./coverage/lcov.info
 
       - name: Get changed files
         uses: ./.github/actions/get-chaged-files
         id: changed-files
-
-      # - run: |
-      #     echo "${{ steps.changed-files.outputs.changed-files }}"
 
       # - name: Check code metrics
       #   run: |
@@ -86,12 +72,14 @@ jobs:
       - name: Annotation for lint checker
         if: always()
         run: |
-          CHANGED_FILES="${{ steps.changed-files.outputs.changed-files }}"
           echo $CHANGED_FILES
           for FILE in $CHANGED_FILES; do
             echo "$FILE"
-            grep -1 -E ".*$FILE.*" flutter_analyze_report.txt || [[ $? == 1 ]]
+            grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
           done
+        env:
+          CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
+          LOG_FILE_PATH: ./flutter_analyze_report.txt
 
       # - name: Annotation for DMC checker
       #   if: always()
