--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -38,12 +38,6 @@ jobs:
       - name: Get flutter packages
         run: flutter pub get
 
-      - name: Add problem matcher
-        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
-
-      - name: Check lint
-        run: flutter analyze > flutter_analyze_report.txt
-
       - name: Run unit test
         run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
 
@@ -61,13 +55,19 @@ jobs:
         with:
           files: ./coverage/lcov.info
 
+      - name: Add problem matcher
+        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+  
+      - name: Check lint
+        run: flutter analyze > flutter_analyze_report.txt
+
+      - name: Check code metrics
+        run: |
+          flutter pub run dart_code_metrics:metrics analyze lib --reporter=console > dart-code-metrics_analyze_report.txt || true
+
       - name: Get changed files
         uses: ./.github/actions/get-chaged-files
         id: changed-files
-
-      # - name: Check code metrics
-      #   run: |
-      #     flutter pub run dart_code_metrics:metrics analyze lib --reporter=console > dart-code-metrics_analyze_report.txt || true
 
       - name: Annotation for lint checker
         if: always()
@@ -81,20 +81,17 @@ jobs:
           CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
           LOG_FILE_PATH: ./flutter_analyze_report.txt
 
-      # - name: Annotation for DMC checker
-      #   if: always()
-      #   run: |
-      #     CHANGED_FILES="${{ steps.extract_changed_files.outputs.changed_files }}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%0A'/$'\n'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%0D'/$'\r'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'%25'/'%'}"
-      #     CHANGED_FILES="${CHANGED_FILES//'.'/"\."}"
-      #     CHANGED_FILES="${CHANGED_FILES//'/'/"\/"}"
-      #     echo "$CHANGED_FILES"
-      #     for FILE in $CHANGED_FILES; do
-      #       echo "$FILE"
-      #       grep -1 -E ".*$FILE.*" dart-code-metrics_analyze_report.txt || [[ $? == 1 ]]
-      #     done
+      - name: Annotation for DMC checker
+        if: always()
+        run: |
+          echo $CHANGED_FILES
+          for FILE in $CHANGED_FILES; do
+            echo "$FILE"
+            grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
+          done
+        env:
+          CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
+          LOG_FILE_PATH: ./dart-code-metrics_analyze_report.txt
 
       - name: Remove problem matcher
         if: always()
