--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -55,8 +55,8 @@ jobs:
         with:
           files: ./coverage/lcov.info
 
-      - name: Add problem matcher
-        run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
+      # - name: Add problem matcher
+      #   run: echo "::add-matcher::.github/analyzer-problem-matcher.json"
   
       - name: Check lint
         run: flutter analyze > flutter_analyze_report.txt
@@ -70,33 +70,41 @@ jobs:
         uses: ./.github/actions/get-chaged-files
         id: changed-files
 
+      # - name: Annotation for lint checker
+      #   if: always()
+      #   run: |
+      #     echo $CHANGED_FILES
+      #     for FILE in $CHANGED_FILES; do
+      #       echo "$FILE"
+      #       grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
+      #     done
+      #   env:
+      #     CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
+      #     LOG_FILE_PATH: ./flutter_analyze_report.txt
+
       - name: Annotation for lint checker
         if: always()
-        run: |
-          echo $CHANGED_FILES
-          for FILE in $CHANGED_FILES; do
-            echo "$FILE"
-            grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
-          done
-        env:
-          CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
-          LOG_FILE_PATH: ./flutter_analyze_report.txt
+        uses: ./.github/actions/annotate-problems
+        with:
+          matcher-config-path: .github/analyzer-problem-matcher.json
+          analysis-report-path: ./flutter_analyze_report.txt
+          changed-files: ${{ steps.changed-files.outputs.changed-files }}
 
-      - name: Annotation for DMC checker
-        if: always()
-        run: |
-          echo $CHANGED_FILES
-          for FILE in $CHANGED_FILES; do
-            echo "$FILE"
-            grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
-          done
-        env:
-          CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
-          LOG_FILE_PATH: ./dart-code-metrics_analyze_report.txt
+      # - name: Annotation for DMC checker
+      #   if: always()
+      #   run: |
+      #     echo $CHANGED_FILES
+      #     for FILE in $CHANGED_FILES; do
+      #       echo "$FILE"
+      #       grep -1 -E ".*$FILE.*" $LOG_FILE_PATH || [[ $? == 1 ]]
+      #     done
+      #   env:
+      #     CHANGED_FILES: ${{ steps.changed-files.outputs.changed-files }}
+      #     LOG_FILE_PATH: ./dart-code-metrics_analyze_report.txt
 
-      - name: Remove problem matcher
-        if: always()
-        run: echo "::remove-matcher owner=dart-analyzer::"
+      # - name: Remove problem matcher
+      #   if: always()
+      #   run: echo "::remove-matcher owner=dart-analyzer::"
 
       # - name: Setup Ruby
       #   uses: ruby/setup-ruby@v1
