--- a/.github/workflows/flutter-ci.yaml
+++ b/.github/workflows/flutter-ci.yaml
@@ -37,10 +37,16 @@ jobs:
 
       - name: Get flutter packages
         run: flutter pub get
-  flutter-ci:
+      
+  unit-test:
     runs-on: ubuntu-latest
     needs: prepare
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 100
+
       - name: Run unit test
         run: flutter test --coverage --coverage-path=./coverage/lcov.info --machine > flutter_test_report.txt
 
@@ -57,7 +63,11 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: ./coverage/lcov.info
-
+  
+  flutter-ci:
+    runs-on: ubuntu-latest
+    needs: unit-test
+    steps:
       - name: Check lint
         run: flutter analyze > flutter_analyze_report.txt || true
 
